Started home page design

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -8,7 +8,7 @@ $accent: #000
 $header: #000
 $paragraph: #000
 $border: #000
-$bg: #222
+$bg: #020133
 $alert: #c70000
 $text-light: #ccc
 $text-dark: #333
@@ -17,7 +17,7 @@ $standard-padding: 20px
 
 // Fonts
 
-$font-stack: "Montserrat", sans-serif
+$font-stack: "Oswald", sans-serif
 
 // General Styles
 
@@ -38,9 +38,11 @@ h1
 h2
     font-size: 2.2em
     margin: 0
+    font-weight: 300
 
 h3
     font-size: 1.3em
+
     margin: 0
 
 a
