--- a/src/app/contact/contact.component.sass
+++ b/src/app/contact/contact.component.sass
@@ -1,3 +1,426 @@
+// Colours
+
+$primary: #000
+$secondary: #ffe4b1
+$accent: #000
+$header: #000
+$paragraph: #000
+$border: #000
+$bg: #020133
+$alert: #c70000
+$text-light: #fff
+$text-dark: #333
+$text-hover: #555
+$standard-padding: 20px
+
+// Fonts
+
+$font-stack: "Oswald", sans-serif
+
+// General Styles
 
 #success
     display: none
+
+html
+    scroll-behavior: smooth
+
+p
+    font-size: 1rem
+    font-weight: 200
+
+h1, h2, h3
+    color: $text-light
+    font-weight: 300
+
+.wrapper
+    display: flex
+    flex-wrap: wrap
+    justify-content: center
+    gap: 20px
+
+section
+    width: 100vw
+    height: 100vh
+    text-align: center
+    margin: 0
+    font-family: $font-stack
+    display: flex
+    justify-content: center
+    align-items: center
+    background: $bg
+
+.contact
+    background: $bg
+    color: $text-light
+    display: flex
+    flex-direction: column
+
+    h1
+        padding-bottom: 5rem
+
+    #success1
+        display: none
+
+    .form-wrapper
+        display: flex
+        flex-direction: row
+        width: 100%
+
+    .contact-details
+        width: 50%
+        p
+            font-weight: 300
+            font-size: 1.2rem
+
+    .form-elem
+        text-align: left
+        display: flex
+        justify-content: space-between
+        color: $text-light
+
+        p
+            text-align: left
+            height: unset
+            margin: 0
+            padding: 0
+            font-weight: 300
+    .error
+        display: flex
+        color: red
+        text-align: left
+        height: unset
+        margin: 0
+        padding: 0
+        font-weight: 300
+
+    p
+        padding: 0 10%
+        padding-bottom: 80px
+        font-weight: 800
+
+    .form
+        width: 50%
+        ::placeholder
+            color: $text-light
+            font-family: $font-stack
+            font-size: 1.2rem
+            text-align: left
+
+        form
+            display: flex
+            flex-direction: column
+            width: 100%
+            input, textarea
+                font-family: $font-stack
+                font-weight: 300
+                font-size: 12pt
+                border: none
+                border: solid 1px $text-light
+                background-color: inherit
+                color: inherit
+                width: 60%
+                margin-bottom: 30px
+                padding: 10px
+            textarea
+                border: solid 1px $text-light
+            input:focus
+                outline: none
+
+            .submit
+                margin-top: 40px
+                width: 130px
+                color: $text-light
+                font-family: $font-stack
+                font-size: 1.2rem
+                border: solid 1px $text-light
+                background-color: inherit
+                border-radius: 50px
+
+@media (max-width: 1340px)
+
+    section
+        height: unset
+
+    .about
+
+        .wrapper
+            padding: 0
+            margin: 0
+
+            .right
+                padding: 0px
+                width: 90vw
+
+@media (max-width: 1040px)
+
+    section
+        height: unset
+
+    // About
+
+    .about
+        display: flex
+        align-items: center
+        .wrapper
+            padding: 0
+            margin: 0
+            flex-direction: column
+            align-items: center
+            .left
+                align-items: center
+                width: 100%
+                img
+                    max-width: 20rem
+
+            .right
+                padding: 0px
+                width: 90vw
+                p
+                    font-size: 0.8rem
+        a
+            font-size: 3rem
+
+    // Services
+
+    .services
+        padding-top: 3rem
+        background: #e3caa5
+        color: $primary
+        display: flex
+        flex-direction: column
+        align-items: center
+
+        .wrapper
+            grid-template-columns: repeat(1, 1fr)
+
+        .service
+            min-height: 9rem
+            p
+                font-size: 0.8rem
+
+        a
+            font-size: 3rem
+            padding-bottom: 4rem
+
+    // Contact
+
+    .contact
+
+        .form-wrapper
+            flex-direction: column
+            align-items: center
+
+        .contact-details
+            width: 100%
+            h3
+                font-weight: 500
+            p
+                font-weight: 300
+                font-size: 1rem
+
+        .form-elem
+            text-align: left
+            display: flex
+            justify-content: center
+            color: $text-light
+            width: 90%
+
+            p
+                text-align: center
+                height: unset
+                margin: 0
+                padding: 0
+                font-weight: 300
+        .error
+            display: flex
+            color: red
+            text-align: left
+            height: unset
+            margin: 0
+            padding: 0
+            font-weight: 300
+
+        p
+            padding: 0 10%
+            padding-bottom: 80px
+            font-weight: 800
+
+        .form
+            width: 100%
+
+            ::placeholder
+                color: $text-light
+                font-family: $font-stack
+                font-size: 1rem
+                text-align: left
+
+            form
+                display: flex
+                flex-direction: column
+                align-items: center
+                width: 100%
+                padding-left: 0px
+                input, textarea
+                    font-family: $font-stack
+                    font-weight: 300
+                    font-size: 1rem
+                    border: none
+                    border-bottom: solid 1px $text-light
+                    background-color: inherit
+                    color: inherit
+                    width: 100%
+                    margin-bottom: 30px
+                    padding: 10px
+                    padding-bottom: 5px
+                textarea
+                    border: solid 1px $text-light
+                input:focus
+                    outline: none
+
+                .submit
+                    margin-top: 40px
+                    width: 130px
+                    color: $text-light
+                    font-family: $font-stack
+                    font-size: 1rem
+                    border: solid 1px $text-light
+                    background-color: inherit
+                    border-radius: 50px
+
+@media (max-width: 500px)
+
+    section
+        height: unset
+
+    .about
+        background: $bg
+        display: flex
+        flex-direction: column
+        color: $paragraph
+
+        h1
+            padding: 3rem 0
+
+        .wrapper
+            display: grid
+            grid-template-columns: repeat(1, 1fr)
+            gap: 1rem
+            padding: 1rem
+            color: $text-light
+            height: 50%
+            width: 90%
+
+    // Services
+
+    .services
+        background-image: url('/assets/images/about.jpg')
+        background-size: cover
+        background-repeat: no-repeat
+        color: $primary
+        display: flex
+        flex-direction: column
+        height: unset
+
+        .wrapper
+            display: grid
+            grid-template-columns: repeat(1, 1fr)
+            gap: 1rem
+            padding: 1rem
+            color: $text-light
+            height: unset
+
+            .panel
+                background: $bg
+                -webkit-box-shadow: 2px 7px 17px -5px #000000
+                box-shadow: 2px 7px 17px -5px #000000
+                padding: 1rem
+                border-radius: 5px
+                align-content: space-around
+
+                img
+                    width: 2rem
+
+    // Contact
+
+    .contact
+
+        .form-wrapper
+            flex-direction: column
+            align-items: center
+
+        .contact-details
+            width: 100%
+            h3
+                font-weight: 500
+            p
+                font-weight: 300
+                font-size: 1rem
+
+        .form-elem
+            text-align: left
+            display: flex
+            justify-content: center
+            color: $text-light
+
+            p
+                text-align: center
+                height: unset
+                margin: 0
+                padding: 0
+                font-weight: 300
+        .error
+            display: flex
+            color: red
+            text-align: left
+            height: unset
+            margin: 0
+            padding: 0
+            font-weight: 300
+
+        p
+            padding: 0 10%
+            padding-bottom: 80px
+            font-weight: 800
+
+        .form
+            width: 100%
+
+            ::placeholder
+                color: $text-light
+                font-family: $font-stack
+                font-size: 1rem
+                text-align: left
+
+            form
+                display: flex
+                flex-direction: column
+                align-items: center
+                width: 100%
+                padding-left: 0px
+                input, textarea
+                    font-family: $font-stack
+                    font-weight: 300
+                    font-size: 1rem
+                    border: none
+                    border: solid 1px $text-light
+                    background-color: inherit
+                    color: inherit
+                    width: 100%
+                    margin-bottom: 30px
+                    padding: 10px
+                    padding-bottom: 5px
+                textarea
+                    border: solid 1px $text-light
+                input:focus
+                    outline: none
+
+                .submit
+                    margin-top: 40px
+                    width: 130px
+                    color: $text-light
+                    font-family: $font-stack
+                    font-size: 1rem
+                    border: solid 1px $text-light
+                    background-color: inherit
+                    border-radius: 50px
